--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <link rel="stylesheet" href="style.css">
     <title>Работа со шрифтами</title>
 </head>
 <body>
     <h1>Изучаем свойства текста и шрифтов</h1>
 
-    <p>
+    <p id="egg">
         Это пример текста, в котором вы должны применить свойства CSS:
         font-family, font-style, font-variant, font-weight, font-size,
         text-decoration, text-align, text-indent и text-transform.
     </p>
 
-    <p> 
+    <p id="b"> 
         При наведении курсора на этот текст, он должен изменится.
     </p>
 
-    <a href="#">Эту ссылку нужно сделать без подчеркивания</a>
+    <a id="g" href="#">Эту ссылку нужно сделать без подчеркивания</a>
 </body>
 </html>
